package behavior.observer.ca1;

public interface Listener<T> {
    public void listen(T t);
}
